--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.0.4",
     "css-element-queries": "^1.0.2",
     "d3": "^5.0.0",
+    "moment": "^2.22.0",
     "parcel-bundler": "^1.7.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
