--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@types/d3": "^5.0.0",
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
+    "@types/react-router": "^4.0.23",
+    "@types/react-router-dom": "^4.2.6",
     "css-element-queries": "^1.0.2",
     "d3": "^5.0.0",
     "moment": "^2.22.0",
     "parcel-bundler": "^1.7.0",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "parcel index.html",
